refactoring mitglieder -> teilnehmer

--- a/views/teams/edit-team.hbs
+++ b/views/teams/edit-team.hbs
@@ -19,16 +19,11 @@
     {{#content "page"}}
         <section class="section-course">
             <form action="{{action}}" method="post">
-                {{#if method}}
-                    <input type="hidden" name="_method" data-force-value="true" value="{{method}}"/>
-                {{/if}}
-
-                <input name="isTeam" type="hidden" data-force-value="true" value="true"/>
                 <input name="schoolId" type="hidden" data-force-value="true" value="{{currentSchool}}"/>
 
                 <div class="form-group">
                     <label>Name des Teams</label>
-                    <input class="form-control" name="name" type="text" placeholder="Mathe 10a" value="{{course.name}}"
+                    <input class="form-control" name="name" type="text" placeholder="A-Team" value="{{course.name}}"
                            required/>
                 </div>
 
@@ -49,128 +44,12 @@
                     <label for="externalExperts">Externe Experten dürfen zugreifen</label>
                     <input class="box" type="checkbox" name="externalExperts" value="allowExternalExperts" checked="checked" />
                     <br>
-                    <label for="members">Mitglieder dürfen zugreifen</label>
+                    <label for="members">Teilnehmer dürfen zugreifen</label>
                     <input class="box" type="checkbox" name="members" value="allowExternalMembers" checked="checked" />
                     <br><br>
                     <i>Du kannst die Zugriffsberechtigungen für einzelne Dateien und Ordner jederzeit bearbeiten.</i>
                     <br>
                 </div>
-
-                {{!-- <div class="form-group">
-                    <label>Klasse(n) <small>(Nach dem Speichern werden alle Schüler automatisch hinzugefügt!)</small></label>
-
-                    <select name="classIds[]" multiple data-placeholder="Klasse(n) auswählen">
-                        {{#each classes}}
-                            <option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>
-                                {{#if this.name}}
-                                    {{this.displayName}}
-                                {{else}}
-                                    {{this.name}}
-                                {{/if}}
-                            </option>
-                        {{/each}}
-                    </select>
-                </div> --}}
-
-                {{!-- <div class="form-group">
-                    <label>Lehrer</label>
-
-                    <select name="teacherIds[]" required multiple data-placeholder="Lehrer auswählen">
-                        {{#each teachers}}
-                            <option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>
-                                {{#if this.displayName}}
-                                    {{this.displayName}}
-                                {{else}}
-                                    {{this.firstName}} {{this.lastName}}
-                                {{/if}}
-                            </option>
-                        {{/each}}
-                    </select>
-                </div> --}}
-
-                {{!-- <div class="form-group">
-                    <label>Mitglieder</label>
-
-                    <select name="userIds[]" multiple data-placeholder="Mitglieder auswählen">
-                        {{#each users}}
-                            <option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>
-                                {{#if this.displayName}}
-                                    {{this.displayName}}
-                                {{else}}
-                                    {{this.firstName}} {{this.lastName}}
-                                {{/if}}
-                            </option>
-                        {{/each}}
-                    </select>
-                </div> --}}
-
-                {{!-- <div class="panel-group">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <a data-toggle="collapse" href="#collapse1" class="collapse-toggle"><label>Termine auswählen</label><i class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></a>
-                        </div>
-                        <div id="collapse1" class="panel-collapse collapse">
-                            <div class="times">
-                                <label>Zeitraum (z.B. Schuljahr)</label>
-                                <div class="row">
-                                    <div class="form-group col-md-6">
-                                        <label>Von</label>
-                                        <input name="startDate" id="startDate" data-date type="text" class="form-control" value="{{course.startDate}}"/>
-                                    </div>
-
-                                    <div class="form-group col-md-6">
-                                        <label>Bis</label>
-                                        <input name="untilDate" id="untilDate" data-date type="text" class="form-control" value="{{course.untilDate}}"/>
-                                    </div>
-                                </div>
-
-                                <table width="100%" cellpadding="5px">
-                                    <thead>
-                                    <th></th>
-                                    <th><label>Wochentag</label></th>
-                                    <th><label>Start der Schulstunde</label></th>
-                                    <th><label>Dauer der Schulstunde</label></th>
-                                    <th><label>Raum</label></th>
-                                    </thead>
-                                    <tbody class="add-course-times">
-                                        {{#each course.times}}
-                                            <tr id="{{this._id}}" class="course-time">
-                                                <td><i class="fa fa-trash-o course-time-delete" href={{this._id}}></i></td>
-                                                <td>
-                                                    <select class="form-control" name="times[{{this.count}}][weekday]" type="text">
-                                                        <option value="0" {{#ifeq this.weekday "0"}}selected{{/ifeq}}>Montag</option>
-                                                        <option value="1" {{#ifeq this.weekday "1"}}selected{{/ifeq}}>Dienstag</option>
-                                                        <option value="2" {{#ifeq this.weekday "2"}}selected{{/ifeq}}>Mittwoch</option>
-                                                        <option value="3" {{#ifeq this.weekday "3"}}selected{{/ifeq}}>Donnerstag</option>
-                                                        <option value="4" {{#ifeq this.weekday "4"}}selected{{/ifeq}}>Freitag</option>
-                                                        <option value="5" {{#ifeq this.weekday "5"}}selected{{/ifeq}}>Samstag</option>
-                                                        <option value="6" {{#ifeq this.weekday "6"}}selected{{/ifeq}}>Sonntag</option>
-                                                    </select>
-                                                </td>
-                                                <td>
-                                                    <input class="form-control" name="times[{{this.count}}][startTime]"  value="{{this.startTime}}" data-time type="text"/>
-                                                </td>
-                                                <td>
-                                                    <input class="form-control" name="times[{{this.count}}][duration]" type="number"
-                                                           value="{{this.duration}}" placeholder="in Minuten"/>
-                                                </td>
-                                                <td>
-                                                    <input class="form-control" type="text"
-                                                           name="times[{{this.count}}][room]" value="{{this.room}}" placeholder="z.B. R-1.21"/>
-                                                </td>
-                                            </tr>
-                                        {{/each}}
-                                        {{#embed "courses/components/template-new-course-time"}}{{/embed}}
-                                    </tbody>
-                                </table>
-                                <span class="new-course-time-add" data-timesref="#collapse1">
-                                    <i class="fa fa-plus-circle fa-6"></i> Neuen Termin hinzufügen
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                </div> --}}
-
 
                 <div class="modal-footer">
                     <button class="btn btn-add btn-secondary btn-cancel">
@@ -181,15 +60,10 @@
                         {{submitLabel}}
                     </button>
                 </div>
-
             </form>
 
-
-                {{#embed "lib/components/modal-cancel" class="cancel-modal"}}
-
-                {{/embed}}
-
-
+            {{#embed "lib/components/modal-cancel" class="cancel-modal"}}
+            {{/embed}}
         </section>
     {{/content}}
 {{/extend}}
