--- a/views/teams/forms/form-delete-member.hbs
+++ b/views/teams/forms/form-delete-member.hbs
@@ -1,4 +1,4 @@
 <div class="form-group">
-    <label for="invitation">Möchtest du dieses Mitglied wirklich entfernen?</label>
+    <label for="invitation">Möchtest du diesen Teilnehmer wirklich entfernen?</label>
     <input type="hidden" name="userToRemove">
 </div>
