--- a/views/teams/forms/form-edit-invitation.hbs
+++ b/views/teams/forms/form-edit-invitation.hbs
@@ -6,9 +6,9 @@
     <button class="btn btn-primary btn-resend-invitation">Einladung erneut senden</button> --}}
 
     {{!-- <div class="padding-top" style="margin-bottom: 6rem" class="form-group padding-bottom">
-        <label for="role">Gebe ein, welche Rolle das Mitglied erhalten soll.</label>
+        <label for="role">Gebe ein, welche Rolle der Teilnehmer erhalten soll.</label>
         <select placeholder="Rolle angeben" name="role" id="role">
-            <option value="member" selected>Mitglied</option>
+            <option value="member" selected>Teilnehmer</option>
             <option value="teamexpert">Team-Experte</option>
         </select>
     </div> --}}
