--- a/views/teams/forms/form-invite-external-member.hbs
+++ b/views/teams/forms/form-invite-external-member.hbs
@@ -7,7 +7,7 @@
         <input class="form-control" type="text" name="email" id="email" placeholder="E-Mail eingeben">
     </div>
     <div style="margin-bottom: 6rem" class="form-group padding-bottom">
-        <label for="role">Gebe ein, welche Rolle das Mitglied erhalten soll.</label>
+        <label for="role">Gebe ein, welche Rolle der Teilnehmer erhalten soll.</label>
         <select placeholder="Rolle angeben"  data-placeholder="Rolle angeben" name="role" id="role">
             {{#each roles}}
                 <option value="{{this._id}}">{{this.label}}</option>
