--- a/views/teams/members.hbs
+++ b/views/teams/members.hbs
@@ -26,7 +26,7 @@
                         <div class="col-sm-6">
                             <p>Füge Lehrer und Schüler aus deiner Schule zum Team hinzu.</p>
                             <button class="btn btn-primary btn-add-member padding-bottom">
-                                Interne Mitglieder hinzufügen
+                                Interne Teilnehmer hinzufügen
                             </button>
                         </div>
                     {{/inArray}}
@@ -35,7 +35,7 @@
                         <div class="col-sm-6">
                             <p>Lade externe Experten und Admins anderer Schulen per E-Mail ein.</p>
                             <button class="btn btn-primary btn-invite-external-member">
-                                Externe Mitglieder einladen
+                                Externe Teilnehmer einladen
                             </button>
                         </div>
                     {{/inArray}}
@@ -54,8 +54,8 @@
             {{/ifCond}} --}}
 
             <h4 class="padding-top">{{arrayLength body}}
-                {{#ifCond (arrayLength body) '==' 1}} Mitglied {{/ifCond}}
-                {{#ifCond (arrayLength body) '>' 1}} Mitglieder {{/ifCond}}
+                {{#ifCond (arrayLength body) '==' 1}} Teilnehmer {{/ifCond}}
+                {{#ifCond (arrayLength body) '>' 1}} Teilnehmer {{/ifCond}}
             </h4>
             <div class="container-fluid">
                 <div class="row">
