--- a/views/teams/forms/form-invite-external-member.hbs
+++ b/views/teams/forms/form-invite-external-member.hbs
@@ -1,7 +1,7 @@
 <div class="form-group" data-teamId="{{teamId}}">
     <p>Lade Lehrer anderer Schulen als Team-Admin ein, damit diese Lehrer und Schüler ihrer Schule hinzufügen können.
         Benutze dazu die E-Mail-Adresse, mit der der Lehrer in der {{theme.short_title}} registriert ist.</p>
-    <p>Lade externe Experten ein, sich in der {{theme.short_title}} zu registrieren deinem Team beizutreten.</p>
+    {{!-- <p>Lade externe Experten ein, sich in der {{theme.short_title}} zu registrieren deinem Team beizutreten.</p> --}}
     <div class="form-group" style="margin-top: 3rem">
         <label for="email">Gebe die E-Mail der Person ein, an welche die Einladung verschickt wird.</label>
         <input class="form-control" type="text" name="email" id="email" placeholder="E-Mail eingeben">
