--- a/views/teams/team.hbs
+++ b/views/teams/team.hbs
@@ -1,21 +1,19 @@
 {{#extend "lib/loggedin"}}
 
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/courses/course.css"/>
-        <link rel="stylesheet" href="/styles/homework/homework.css"/>
+        <link rel="stylesheet" href="/styles/files/files.css"/>
         <link rel="stylesheet" href="/vendor/jquery/jquery-ui.css"/>
     {{/content}}
 
     {{#content "scripts" mode="append"}}
         <script src="/scripts/jquery/jquery-ui.min.js" type="text/javascript" defer></script>
         <script src="/scripts/jquery/jquery.ui.touch-punch.js" type="text/javascript" defer></script>
-        <script src="/scripts/courses.js" type="text/javascript" defer></script>
-        <script src="/scripts/topic.js" type="text/javascript" defer></script>
+        <script src="/scripts/files.js" type="text/javascript" defer></script>
     {{/content}}
 
     {{#content "page"}}
 
-        <section class="section-course">
+        <section class="section-teams" data-id="{{../_id}}">
 
             <div class="row description">
                 <div class="col-sm-12">
@@ -25,17 +23,17 @@
 
             <div class="row">
                 <div class="col-sm-12">
-                    <h4>Mitglieder</h4>
+                    <h4>Teilnehmer</h4>
                     <p>
                       Im Team
                       {{#ifCond (arrayLength course.userIds) '==' 1}} befindet {{/ifCond}}
                       {{#ifCond (arrayLength course.userIds) '>' 1}} befinden {{/ifCond}}
                       sich <strong>{{arrayLength course.userIds}}</strong>
-                      {{#ifCond (arrayLength course.userIds) '==' 1}} Mitglied {{/ifCond}}
-                      {{#ifCond (arrayLength course.userIds) '>' 1}} Mitglieder {{/ifCond}}
+                      {{#ifCond (arrayLength course.userIds) '==' 1}} Teilnehmer {{/ifCond}}
+                      {{#ifCond (arrayLength course.userIds) '>' 1}} Teilnehmer {{/ifCond}}
                     </p>
                     <a href="/teams/{{_id}}/members" class="btn btn-add btn-secondary">
-                        Zur Mitglieder-Übersicht
+                        Zur Teilnehmer-Übersicht
                     </a>
                 </div>
             </div>
@@ -43,12 +41,19 @@
             <div class="row padding-top">
                 <div class="col-sm-12">
                     <h4>News</h4>
+                    {{!-- {{#inArray "CREATE_NEWS" permissions}}
+                        <a href="/teams/{{../_id}}/news/add" class="btn btn-add btn-primary">
+                            News anlegen
+                        </a>
+                    {{/inArray}} --}}
                 </div>
             </div>
 
             <div class="row padding-top">
                 <div class="col-sm-12">
                     <h4>Dateien</h4>
+                    {{#embed "files/file-viewer"}}{{/embed}}
+                    {{#embed "files/files-grid" files=files}}{{/embed}}
                     <a href="{{filesUrl}}" class="btn btn-add btn-secondary">Zu den Team-Dateien</a>
                 </div>
             </div>
@@ -65,15 +70,18 @@
             <div class="row padding-top">
                 <div class="col-sm-12">
                     <h4>Termine</h4>
+                    {{!-- {{#inArray "CREATE_NEWS" permissions}}
+                        <a href="/teams/{{../_id}}/event/add" class="btn btn-add btn-primary">
+                            Termin anlegen
+                        </a>
+                    {{/inArray}} --}}
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row padding-top">
                 <div class="col-sm-12">
                     {{#inArray "RENAME_TEAM" permissions}}
                         <a href="/teams/{{../_id}}/edit" class="btn btn-add btn-primary">Team bearbeiten</a>
-                        {{!-- <a href="/teams/{{../_id}}/copy" class="btn btn-add btn-secondary">Team klonen</a> --}}
-                        {{!-- <a class="btn btn-secondary btn-create-share-course" data-courseId="{{../_id}}">Team teilen</a> --}}
                     {{/inArray}}
 
                     {{#inArray "DELETE_TEAM" permissions}}
@@ -99,12 +107,6 @@
                             Löschen
                         </button>
                     </div>
-                {{/content}}
-            {{/embed}}
-
-            {{#embed "lib/components/modal-form" class="invitation-modal"}}
-                {{#content "fields"}}
-                    {{> "courses/forms/form-invitation"}}
                 {{/content}}
             {{/embed}}
 
