fix styling bug for editor, show badges that can be reached, add stamps to preview images

--- a/views/account/profile.hbs
+++ b/views/account/profile.hbs
@@ -34,10 +34,26 @@
           <div class="badge-content">
             <div class="badge-title">
               {{ this.name }}
-              <span>+50 Punkte (TODO: Gibt's sowas in Achievements?)</span>
+              <span>+{{ this.actions.xp }} Punkte </span>
             </div>
             <div class="badge-description">
-              Pünktlichkeit wird doppelt belohnt! Du hast 10 Mal deine Hausaufgaben rechtzeitig abgegeben und erhältst 50 Punkte extra. (TODO: Text in Achievement definieren)
+              {{ this.description }}
+              <!-- Pünktlichkeit wird doppelt belohnt! Du hast 10 Mal deine Hausaufgaben rechtzeitig abgegeben und erhältst 50 Punkte extra. (TODO: Text in Achievement definieren) -->
+            </div>
+          </div>
+        </div>
+        {{/each}}
+        {{#each possibleBadges}}
+        <div class="badge-row opacityblur">
+          <img src="/images/badges/king.png" alt="">
+          <div class="badge-content">
+            <div class="badge-title">
+              {{ this.name }}
+              <span>+{{ this.actions.xp }} Punkte </span>
+            </div>
+            <div class="badge-description">
+              {{ this.description }}
+              <!-- Pünktlichkeit wird doppelt belohnt! Du hast 10 Mal deine Hausaufgaben rechtzeitig abgegeben und erhältst 50 Punkte extra. (TODO: Text in Achievement definieren) -->
             </div>
           </div>
         </div>
@@ -46,20 +62,6 @@
         {{#unless userInfo.achievements }}
           <span>Noch keine Badges</span>
         {{/unless}}
-
-        <!-- <div class="badge-row">
-          <img src="/images/badges/prince.png" alt="">
-          <div class="badge-content">
-            <div class="badge-title">
-              Hausaufgaben-König
-              <span>+50 Punkte</span>
-            </div>
-            <div class="badge-description">
-              Pünktlichkeit wird belohnt! Du hast 5 Mal deine Hausaufgaben rechtzeitig abgegeben und erhältst dafür diese Badge und 25 Punkte. Weiter so!
-            </div>
-          </div>
-        </div>
-      </div> -->
 
       </div>
 
