--- a/views/content/review-content.hbs
+++ b/views/content/review-content.hbs
@@ -2,6 +2,7 @@
 
     {{#content "scripts" mode="append"}}
         <script src="/scripts/vendor-vue.js" defer></script>
+        <script src="/vendor/ckeditor/ckeditor.js" defer></script>
         <script src="/scripts/content/review-content.js" defer></script>
     {{/content}}
 
