--- a/static/styles/account/profile.scss
+++ b/static/styles/account/profile.scss
@@ -56,7 +56,11 @@
   min-height: 100px;
   margin-bottom: 20px;
   display: flex;
+}
 
+.badge-row.opacityblur {
+  opacity: 0.6;
+  filter: blur(1px);
 }
 
 .badge-row img {
