SC-467-Schülertabelle pagination bug (#824)
* step 1/2

aktueller p-parameter wird in die URL geschrieben

* step 2/2 - funktioniert nicht

problem: filtermodul überschreibt URL

* updated filter module

* Updated Filter-Module & better error handling.

* Zwischenstand

Speichern Button funktioniert, Abbrechen nicht

* Abbrechen Button funktioniert

--- a/views/administration/forms/form-classes-edit.hbs
+++ b/views/administration/forms/form-classes-edit.hbs
@@ -1,6 +1,7 @@
 <input name="schoolId" type="hidden" data-force-value="true" value="{{currentSchool}}" />
 {{#if edit}}
     <input type="hidden" name="_id" value="{{class._id}}" />
+    <input type="hidden" name="referrer" value="{{referrer}}" />
 
     <a class="d-block mb-1"
         href="/administration/classes/{{@root.class/_id}}/manage"
@@ -86,7 +87,7 @@
 </section>
 
 <div class="modal-footer mt-1">
-    <a href="/administration/classes" class="btn btn-secondary">Abbrechen</a>
+    <a class="btn btn-secondary btn-cancel">Abbrechen</a>
     {{#unless edit}}
         <button class="btn btn-primary" type="submit" disabled>Klasse hinzufügen</button>
         {{#userHasPermission 'ADMIN_VIEW'}}
@@ -97,3 +98,5 @@
         <button class="btn btn-primary" type="submit" disabled>Änderungen speichern</button>
     {{/unless}}
 </div>
+
+{{#embed "lib/components/modal-cancel" class="cancel-modal"}}{{/embed}}
