--- a/views/news/edit.hbs
+++ b/views/news/edit.hbs
@@ -11,7 +11,7 @@
             CKEDITOR.replaceAll(function (textarea, config) {
                 if (!textarea.classList.contains("customckeditor")) return false; //for only assign a class
             });
-            
+
             $.datetimepicker.setLocale('de');
             $('input[data-datetime]').datetimepicker({
                 format:'d.m.Y H:i',
@@ -32,6 +32,14 @@
         <form class="modal-form" id="news-form" method="post" action="{{action}}">
             {{#if method}}
                 <input type="hidden" name="_method" data-force-value="true" value="{{method}}" />
+            {{/if}}
+
+            {{#if context}}
+                <input type="hidden" name="context" value="{{context}}" />
+            {{/if}}
+
+            {{#if targetId}}
+                <input type="hidden" name="targetId" value="{{targetId}}" />
             {{/if}}
 
             <input name="schoolId" type="hidden" data-force-value="true" value="{{currentSchool}}" />
