--- a/views/teams/team.hbs
+++ b/views/teams/team.hbs
@@ -7,6 +7,9 @@
             .section-teams .section-news .container-fluid {
                 padding: 0;
             }
+            .section-teams .files {
+                margin-bottom: 10px;
+            }
         </style>
     {{/content}}
 
