--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -25,7 +25,7 @@
 		display: block;
 	}
 	h5 {
-		font-style: italic; 
+		font-style: italic;
 		margin: 30px 0px 20px 0px;
 		width: 100%;
 		display: block;
@@ -257,7 +257,7 @@ form.inline {
 .card-deck-row {
 
 	& > div {
-		margin-bottom: 30px;
+		margin-bottom: 1.5rem;
 	}
 
 	.card {
