--- a/views/calendar/card.hbs
+++ b/views/calendar/card.hbs
@@ -1,7 +1,15 @@
 <style>
-.row-striped {
-    padding: 15px 0;
-    border: 1px solid rgba(0,0,0,.125)
+.events-card p {
+  margin-bottom: 0;
+}
+.events-card .card {
+  padding: 15px;
+}
+.events-card .date-info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
 }
 .badge-secondary {
     color: #fff;
@@ -20,22 +28,24 @@
 }
 </style>
 
-<div class="container-fluid">
+<div class="events-card">
   <div class="row">
-    <div class="col-md-6 col-lg-4">
-      <div class="row row-striped">
-        <div class="col-xs-2 text-right">
-          <h1><span class="badge badge-secondary">19</span></h1>
-          <h3>OKT</h3>
-        </div>
-        <div class="col-xs-10">
-          <h4 class="text-uppercase"><strong>Freibier Friday</strong></h4>
-          <ul class="list-inline">
-              <li class="list-inline-item"><i class="fa fa-calendar-o" aria-hidden="true"></i> Montag</li>
-            <li class="list-inline-item"><i class="fa fa-clock-o" aria-hidden="true"></i> 12:30 - 14:00</li>
-            <li class="list-inline-item"><i class="fa fa-location-arrow" aria-hidden="true"></i> Campus</li>
-          </ul>
-          <p>Freibier für alle! Sponsored by HPI 😁</p>
+    <div class="col-lg-6 col-xl-4">
+      <div class="card">
+        <div class="row row-striped">
+          <div class="col-xs-3 col-sm-2 col-xl-3 text-right date-info">
+            <h1><span class="badge badge-secondary">19</span></h1>
+            <h3>OKT</h3>
+          </div>
+          <div class="col-xs-9 col-sm-10 col-xl-9">
+            <h4 class="text-uppercase"><strong>Freibier Friday</strong></h4>
+            <ul class="list-inline">
+                <li class="list-inline-item"><i class="fa fa-calendar-o" aria-hidden="true"></i> Montag</li>
+              <li class="list-inline-item"><i class="fa fa-clock-o" aria-hidden="true"></i> 12:30 - 14:00</li>
+              <li class="list-inline-item"><i class="fa fa-location-arrow" aria-hidden="true"></i> Campus</li>
+            </ul>
+            <p>Freibier für alle! Sponsored by HPI 😁</p>
+          </div>
         </div>
       </div>
     </div>
