--- a/views/dashboard/components/card_section.hbs
+++ b/views/dashboard/components/card_section.hbs
@@ -5,7 +5,7 @@
         </div>
         <div class="row tasks card-deck-row">
             {{#each content}}
-                <div class="sc-card-wrapper col-xl-3 col-lg-4 col-md-6 col-sm-12">
+                <div class="sc-card-wrapper col-lg-4 col-md-6 col-sm-12">
                     {{> 'lib/components/sc-card' link-text=../link-text additionalInfoName=../additionalInfoName}}
                 </div>
             {{else}}
