--- a/views/dashboard/components/card_section.hbs
+++ b/views/dashboard/components/card_section.hbs
@@ -10,7 +10,7 @@
                 </div>
             {{else}}
                 <div class="col-md-8 offset-md-2 col-lg-12 offset-lg-0">
-                    <div class="alert">
+                    <div class="alert" style="margin-bottom: 0">
                         Keine aktuellen Einträge vorhanden.
                     </div>
                 </div>
