--- a/views/teams/team.hbs
+++ b/views/teams/team.hbs
@@ -72,7 +72,7 @@
                     <h4>Termine</h4>
                     {{> 'calendar/card'}}
                     {{#inArray "CREATE_NEWS" permissions}}
-                        <a href="/teams/{{../_id}}/events" class="btn btn-add btn-secondary">
+                        <a style="margin-top: 0.5rem" href="/teams/{{../_id}}/events" class="btn btn-add btn-secondary">
                             Zur Termin-Übersicht
                         </a>
                     {{/inArray}}
