--- a/views/calendar/card.hbs
+++ b/views/calendar/card.hbs
@@ -38,7 +38,7 @@
             <h3>OKT</h3>
           </div>
           <div class="col-xs-9 col-sm-10 col-xl-9">
-            <h4 class="text-uppercase"><strong>Freibier Friday</strong></h4>
+            <h4><strong>Freibier Friday</strong></h4>
             <ul class="list-inline">
                 <li class="list-inline-item"><i class="fa fa-calendar-o" aria-hidden="true"></i> Montag</li>
               <li class="list-inline-item"><i class="fa fa-clock-o" aria-hidden="true"></i> 12:30 - 14:00</li>
