--- a/views/teams/team.hbs
+++ b/views/teams/team.hbs
@@ -37,8 +37,7 @@
                       {{#ifCond (arrayLength course.userIds) '==' 1}} befindet {{/ifCond}}
                       {{#ifCond (arrayLength course.userIds) '>' 1}} befinden {{/ifCond}}
                       sich <strong>{{arrayLength course.userIds}}</strong>
-                      {{#ifCond (arrayLength course.userIds) '==' 1}} Teilnehmer {{/ifCond}}
-                      {{#ifCond (arrayLength course.userIds) '>' 1}} Teilnehmer {{/ifCond}}
+                      {{#ifCond (arrayLength course.userIds) '>=' 1}} Teilnehmer {{/ifCond}}
                     </p>
                     <a href="/teams/{{_id}}/members" class="btn btn-add btn-secondary">
                         Zur Teilnehmer-Übersicht
@@ -54,7 +53,7 @@
                         Zur News-Übersicht
                     </a>
                     {{#inArray "CREATE_NEWS" permissions}}
-                        <a href="/teams/{{../_id}}/news/add" class="btn btn-add btn-primary">
+                        <a href="/teams/{{../_id}}/news/new" class="btn btn-add btn-primary">
                             News anlegen
                         </a>
                     {{/inArray}}
