--- a/views/calendar/card.hbs
+++ b/views/calendar/card.hbs
@@ -32,11 +32,11 @@
     <div class="col-lg-6 col-xl-4">
       <div class="card">
         <div class="row row-striped">
-          <div class="col-xs-3 col-sm-2 col-xl-3 text-right date-info">
+          <div class="col-xs-3 text-right date-info">
             <h1><span class="badge badge-secondary">19</span></h1>
             <h3>OKT</h3>
           </div>
-          <div class="col-xs-9 col-sm-10 col-xl-9">
+          <div class="col-xs-9">
             <h4><strong>Freibier Friday</strong></h4>
             <ul class="list-inline">
                 <li class="list-inline-item"><i class="fa fa-calendar-o" aria-hidden="true"></i> Montag</li>
