--- a/views/files/files-grid.hbs
+++ b/views/files/files-grid.hbs
@@ -1,7 +1,7 @@
 <section class="files">
     <div class="row">
         {{#each files}}
-            <div class="col-sm-6 col-xs-12 col-md-4">
+            <div class="col-lg-6 col-xl-4">
                 <div class="card file" data-href="/files/file?file={{this.name}}" data-file-name="{{this.name}}" data-file-size="{{this.size}}" data-file-id="{{this._id}}">
                     <div class="openFile">
                         <div class="card-block"
@@ -9,11 +9,11 @@
                                      fileViewer('{{this.type}}', '{{this.key}}', '{{this.name}}', '{{this._id}}');">
                             <div class="card-title">
                                 <div class="row">
-                                    <div class="col-sm-3">
+                                    <div class="col-xs-3">
                                         <div class="file-preview"
                                             style="background-image: url({{this.thumbnail}}); -webkit-background-size: 50px ;background-size: 50px;"></div>
                                     </div>
-                                    <div class="col-sm-9">
+                                    <div class="col-xs-9">
                                         <a class="title">
                                             {{this.name}}
                                         </a>
